# hw-10

authors/: README.md  pyproject.toml
authors/quotes_authors/: manage.py
authors/quotes_authors/authapp/: forms.py  models.py  quotes_from_Mongo.py  urls.py  views.py
authors/quotes_authors/authapp/migrations/: 0001_initial.py  0002_remove_author_born_date_alter_author_born_location_and_more.py  0003_author_user_quote_user_quote_quote_for_username.py  0004_alter_author_fullname.py  0005_remove_quote_quote_for_username.py  0006_remove_author_user_remove_quote_user.py  0007_author_user_quote_user.py  0008_alter_quote_author.py  0009_tag_remove_author_user_remove_quote_user_and_more.py  0010_alter_author_born_date.py  0011_remove_quote_tags_delete_tag_quote_tags.py  0012_alter_author_born_date.py  0013_alter_author_born_location_alter_author_description_and_more.py
authors/quotes_authors/authapp/templates/authapp/: author.html  base.html  detail.html  index.html  quote.html
authors/quotes_authors/quotes_authors/: asgi.py  settings.py  urls.py  wsgi.py
authors/quotes_authors/users/: forms.py  urls.py  views.py
authors/quotes_authors/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
