[tool.poetry]
name = "authors"
version = "0.1.0"
description = ""
authors = ["Hannakua <alucky1181@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
